--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/** input type range styling**/
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 14px;
+    border: 0;
+    height: 14px;
+    background: white;
+}
+
+input[type="range"]::-moz-range-thumb{
+    -webkit-appearance: none;
+    width: 14px;
+    border: 0;
+    height: 14px;
+    background: white;
+}
+
+input[type="range"]::-ms-thumb{
+    -webkit-appearance: none;
+    width: 14px;
+    border: 0;
+    height: 14px;
+    background: white;
+}
