--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     width: 14px;
     border: 0;
+    border-radius: 50%;
     height: 14px;
     background: white;
 }
@@ -16,6 +17,7 @@ input[type="range"]::-moz-range-thumb{
     -webkit-appearance: none;
     width: 14px;
     border: 0;
+    border-radius: 50%;
     height: 14px;
     background: white;
 }
@@ -24,6 +26,7 @@ input[type="range"]::-ms-thumb{
     -webkit-appearance: none;
     width: 14px;
     border: 0;
+    border-radius: 50%;
     height: 14px;
     background: white;
 }
